Added OTP and JWT authentication (#38)
* Minor changes

* feat: :sparkles: Added signup functionality

* feat: :sparkles: Added login functionality

* feat: :sparkles: Added jwt configuration and middleware to allow roles

* feat: :sparkles: Added jwt configuration and middleware to allow roles on protected routes

* refactor: :recycle: Implemented routes for getting single  amenity and room type

* fix: :bug: Fixed jwt expiration error

* docs: :memo: Updated documentation for amenities and room types

Includes security parameters (Bearer) to protected endpoints
